# adaptive_quadrature

./: CMakeLists.txt  README.md  plot.sh  visualize.py
multitria/: CMakeLists.txt  find_cells.h  find_values.h  test.cc  test_values.cc
