CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
FIND_PACKAGE(deal.II 8.0 REQUIRED
  HINTS
  ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR})
DEAL_II_INITIALIZE_CACHED_VARIABLES()
PROJECT(AQ)
ENABLE_TESTING()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})

CONFIGURE_FILE(plot.sh ${CMAKE_BINARY_DIR} @ONLY)
CONFIGURE_FILE(visualize.py ${CMAKE_BINARY_DIR} @ONLY)

ADD_SUBDIRECTORY(multitria)
